# rpcz

./: .gitignore  CMakeLists.txt  CMakeLists.txt.win  README.md
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rpcz.sln
build-win/examples/cpp/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  example_client.vcxproj  example_client.vcxproj.filters  example_pb.vcxproj  example_pb.vcxproj.filters  example_server.vcxproj  example_server.vcxproj.filters
build-win/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-win/src/rpcz/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  rpcz.pb.cc  rpcz.pb.h  rpcz.vcxproj  rpcz.vcxproj.filters  zsendrpc.vcxproj  zsendrpc.vcxproj.filters
build-win/src/rpcz/plugin/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-win/src/rpcz/plugin/cpp/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  protoc-gen-cpp_rpcz.vcxproj  protoc-gen-cpp_rpcz.vcxproj.filters
build-win/src/rpcz/plugin/python/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  protoc-gen-python_rpcz.vcxproj  protoc-gen-python_rpcz.vcxproj.filters
build-win/test/: CTestTestfile.cmake  GLog.vcxproj  GLog.vcxproj.filters  GTest.vcxproj  GTest.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  application_test.vcxproj  application_test.vcxproj.filters  callback_test.vcxproj  callback_test.vcxproj.filters  client_server_test.vcxproj  client_server_test.vcxproj.filters  cmake_install.cmake  connection_manager_test.vcxproj  connection_manager_test.vcxproj.filters  rpcz_gtest_main.vcxproj  rpcz_gtest_main.vcxproj.filters
build-win/test/proto/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  _force_python_protos.vcxproj  _force_python_protos.vcxproj.filters  cmake_install.cmake  search.pb.cc  search.pb.h  search_pb.vcxproj  search_pb.vcxproj.filters
cmake_modules/: FindProtobufPlugin.cmake.proto3
examples.win/common/: rpcz.proto  search.proto
examples.win/cpp/: CMakeLists.txt  dqlib.rpcz.cc  dqlib.rpcz.h  dqlibgo.h  example_client.cc  example_server.cc  search.pb.cc  search.pb.h
examples.win/debug/: dqlibgo.lib
examples/common/: search.proto  search.proto.bak
examples/cpp/: CMakeLists.txt  dqlib.pb.cc  dqlib.pb.h  example_client.cc  example_client.cc.benchmark  example_server.cc  inirw.c  inirw.h  rpcz.pb.h  search.pb.cc  search.rpcz.h
include/rpcz/: connection_manager.hpp  search.pb.h
python/: CMakeLists.txt  example_client.py  rpc_test.py  rpc_test.py.bak  rpc_test_all.py  rpc_test_all.py.bak  rpcz.lib
python - winok/: setup.py
python - winok/cython/: python_rpc_service.hpp  pywraprpcz.cpp
python/grpc_client/: dqmvoassetallocationservice_pb2_grpc.py  grpc_cla_test.py  grpc_cla_test.py.bak
python/rpcz/: __init__.py  rpcz_pb2.py.win
src/rpcz/: CMakeLists.txt  CMakeLists.txt.win  clock.cc  server.cc
src/rpcz/plugin/common/: strutil.h
src/rpcz/plugin/cpp/: cpp_helpers.cc  cpp_helpers.h  file_generator.cc  rpcz_cpp_service.cc
src/rpcz/plugin/python/: rpcz_python_generator.cc
src/rpcz/proto/: protoc-gen-python_rpcz  rpcz.proto
test/: CMakeLists.txt  client_server_test.cc
test/proto/: search.proto
